--- a/releases/index.html
+++ b/releases/index.html
@@ -1,4 +1,5 @@
 <html><head></head><body>
+<a href="base/">base/</a><br>
 <a href="fortia/">fortia/</a><br>
 <a href="openwrt/">openwrt/</a><br>
 <a href="index.html">index.html</a><br>
